# advent_of_code_2022

./: .gitignore  Cargo.toml  LICENSE  README.md
aoc-core/: Cargo.toml
aoc-core/src/: lib.rs
macro-support/: Cargo.toml
macro-support/src/: lib.rs
src/: aoc_2022_1.rs  aoc_2022_2.rs  aoc_2022_3.rs  aoc_2022_4.rs  aoc_2022_5.rs  aoc_2022_6.rs  aoc_2022_7.rs  aoc_2022_8.rs  main.rs  template.rs
