[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["aoc-core", "macro-support"]

[patch.crates-io]
macro-support = { path = "macro-support" }
aoc-core = { path = "aoc-core" }

[dependencies]
aoc-core = "0.1"
macro-support = "0.1"
anyhow = "1.0"
clap = "4.0"
macro_state = "0.2"
